# Birdbrain

./: .gitignore  ARCHITECTURE_BEFORE_AFTER.md  DEMO.md  PROJECT_BRIEF.md  README.md  RUNNING_THE_PROTOTYPE.md
app/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
app/app/: globals.css  layout.tsx  page.tsx
app/components/: BriefView.tsx  ConceptDossier.tsx  ConceptTile.tsx  DocCard.tsx  DocDrawer.tsx  DossierContext.tsx  EngineSettingsDrawer.tsx  FolderBrowserDialog.tsx  Panorama.tsx  RobotBirdLogo.tsx  StartupShell.tsx  StatusBadge.tsx  WebUploadPanel.tsx  WorkspacePicker.tsx  WorkspaceProvider.tsx  WorkspaceShell.tsx
app/components/panels/: AskPanel.tsx  ConceptsPanel.tsx  DatalogPanel.tsx  HubPanel.tsx  JournalPanel.tsx  SearchPanel.tsx  TimelinePanel.tsx  WorkbenchPanel.tsx
app/demo/demo-mode/: README.md  app.db
app/lib/ai/: cursor-agent-binary.ts  cursor-agent.ts  evidence-conflicts.ts  memesis.ts  precontext.ts  synthesize.ts
app/lib/db/: database.ts  participation.ts  queries.ts  schema.sql
app/lib/desktop/: tauri-bridge.ts
app/lib/engine/: anthropic.ts  cursor-cli.ts  (+7 more)
app/scripts/: eval-dossiers.ts  ingest.ts  pack-sidecar.mjs  smoke-tier15.ts  synthesize-commit.ts  synthesize-prep.ts
assets/: architecture.mmd
fixtures/smoke-corpus/: README.md  hello.md  note.txt
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs  sidecar.rs
src-tauri/src/commands/: folder.rs  keychain.rs  mod.rs  windows.rs
(+49 files in other folders)
