[package]
name = "birdbrain"
version = "0.1.0"
description = "Bird Brain desktop wrapper"
authors = ["Alexander"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-process = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = "3.2"
directories = "5.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
once_cell = "1.19"
anyhow = "1.0"
which = "6.0"
url = "2.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
